--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,4 +7,6 @@
 @use "./partials/components/navbar";
 @use "./partials/components/general";
 @use "./partials/components/footer";
+@use "./partials/components/buttons";
+
 
