agregue header y footer a las otra pages

--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -1,12 +1,9 @@
-
-.bg-estilo-jesu{
+.estilo-footer-jesu{
     background-color: rgb(170, 201, 117);
 }
 .logo-navbar{
-    width: 65px;
-    height: 65px;
+    width: 95px
 }
-
-.boton-search{
-    color: rgb(58, 58, 58);
+.btn-estilo-jesu{
+    background-color: rgb(255, 255, 255);
 }
