--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,11 @@
   color: rgb(58, 58, 58);
 }
 
+.titulo-page {
+  text-align: center;
+  margin: 30px;
+}
+
 .estilo-footer-jesu {
   background-color: rgb(170, 201, 117);
 }
