se agregó cont. a Tree Wisdom

--- a/scss/partials/components/_general.scss
+++ b/scss/partials/components/_general.scss
@@ -2,3 +2,15 @@
     text-align: center;
     margin: 30px;
 }
+.card-estilo-jesu{
+    max-width: 1200px;
+    width: 100%;
+    height: auto;
+}
+.texto-card-jesu{
+    align-items: center;
+}
+.titulo-parrafo{
+    text-align: center;
+}
+
