--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -1,3 +1,9 @@
-$hover-color: coral;
-$main-size: 24px;
 
+$main-size: 24px;
+$color-boton-principal: #2E7D5E;
+$hover-boton-principal: #25664D;
+$color-boton-secundario: #5A8BA0;
+$hover-boton-secundario:#476D82;
+$color-texto-base: #4B4F46;
+$color-fondo-alternativo: #F3F1EA;
+$color-bordes-y-lineas: #D7D7D7;
