mas sass aplicado y mixin y variables

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@
 @use "./partials/components/general";
 @use "./partials/components/footer";
 @use "./partials/components/buttons";
+@use "./partials/components/cards";
+
 
 
 
