--- a/scss/partials/components/_general.scss
+++ b/scss/partials/components/_general.scss
@@ -4,11 +4,7 @@
     text-align: center;
     margin: 30px;
 }
-.card-estilo-jesu{
-    max-width: 1200px;
-    width: 100%;
-    height: auto;
-}
+
 .texto-card-jesu{
     align-items: center;
 }
@@ -35,3 +31,4 @@
     font-size: 2rem;
 }
 
+//Tabla//
