--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -2,8 +2,10 @@
 $main-size: 24px;
 $color-boton-principal: #2E7D5E;
 $hover-boton-principal: #25664D;
+$active-boton-principal: #1C523C;
 $color-boton-secundario: #5A8BA0;
 $hover-boton-secundario:#476D82;
+$active-boton-secundario: #375368;
 $color-texto-base: #4B4F46;
 $color-fondo-alternativo: #F3F1EA;
 $color-bordes-y-lineas: #D7D7D7;
