--- a/scss/partials/utilities/_mixin.scss
+++ b/scss/partials/utilities/_mixin.scss
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: $direction;
     justify-content: $justify;
-    align-self: $align;
+    align-items: $align;
 }
