--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,37 @@
   font-size: 2rem;
 }
 
+.tabla-estilo {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 2rem;
+}
+.tabla-estilo table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 1rem;
+}
+.tabla-estilo table th {
+  font-size: 34px;
+  font-weight: 600;
+  color: #4B4F46;
+  padding-bottom: 1rem;
+}
+.tabla-estilo td {
+  padding: 1rem;
+  vertical-align: top;
+}
+.tabla-estilo td h3 {
+  font-size: 27px;
+  margin-bottom: 0.5rem;
+  color: #4B4F46;
+}
+.tabla-estilo td p {
+  font-size: 19px;
+  line-height: 1.5;
+  color: #4B4F46;
+}
+
 .estilo-footer-jesu {
   background-color: rgb(170, 201, 117);
 }
