--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -10,3 +10,36 @@
 .btn-estilo-jesu{
     background-color: rgb(255, 255, 255);
 }
+
+.estilo-footer-jesu{
+    .logo-navbar{
+
+    }
+    h4{
+
+    }
+    ul{
+        li{
+            a{
+
+            }
+        }
+    }
+    .newsletter{
+         form{
+            h4{
+
+            }
+            p{
+
+            }
+            .newsletter1{
+                .btn-estilo-jesu{
+
+                }
+            }
+         }
+
+    }
+    
+}
