--- a/scss/partials/components/_navbar.scss
+++ b/scss/partials/components/_navbar.scss
@@ -3,8 +3,9 @@
 .bg-estilo-jesu{
     background-color: variables.$color-fondo-alternativo;
 }
+
 .logo-navbar{
-    width: 75px;
+    width: 95px
 }
 
 .boton-secundario{
