Areglando las ultimas pages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@
 @use "./partials/components/footer";
 @use "./partials/components/buttons";
 @use "./partials/components/cards";
+@use "./partials/components/carrusel";
+
 
 
 
