--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -8,4 +8,7 @@ $hover-boton-secundario:#476D82;
 $active-boton-secundario: #375368;
 $color-texto-base: #4B4F46;
 $color-fondo-alternativo: #F3F1EA;
+$color-fondo-alternativo-dos: #E8F0ED;
 $color-bordes-y-lineas: #D7D7D7;
+$borde-suave-card: #E8E8E8;
+
