--- a/scss/partials/components/_cards.scss
+++ b/scss/partials/components/_cards.scss
@@ -1,11 +1,42 @@
 @use "../utilities/variables";
 @import "../utilities/mixin";
 
-//Bloque titulo+parrafo+boton-principal//
+//Bloque titulo+parrafo+boton-principal con fondo de color//
 .info-card-container {
     @include flex (column, center, center);
     text-align: center;
     background-color: variables.$color-fondo-alternativo-dos;
+    width: 100%;
+    height: 300px;
+
+    .info-card {
+        @include flex(column, center, center);
+        color: variables.$color-texto-base;
+        width: 1150px;
+
+        h3 {
+            font-size: 35px;
+            margin: 9px;
+        }
+
+        p {
+            font-size: 19px;
+            margin: 9px;
+
+        }
+
+        .boton-primario {
+            margin: 15px;
+
+        }
+
+    }
+}
+
+//mismo bloque de arriba pero sf (sin fondo)//
+.info-card-container-sf {
+    @include flex (column, center, center);
+    text-align: center;
     width: 100%;
     height: 300px;
 
@@ -41,7 +72,7 @@
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid variables.$borde-suave-card; 
+    border: 1px solid variables.$borde-suave-card;
     color: variables.$color-texto-base;
     background-color: variables.$color-fondo-alternativo;
 
@@ -208,5 +239,58 @@
             }
         }
 
+    }
+}
+
+.card-texturas {
+    background-color: white;
+    border-radius: 20px;
+    border: 1px solid variables.$borde-suave-card ;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+    max-width: 1200px;
+    margin-left: auto;  
+    margin-right: auto;
+
+    .card-body {
+        padding: 1.5rem;
+        color: variables.$color-texto-base ;
+        .card-title {
+            font-size: 40px;
+
+        }
+
+        .card-text {
+         font-size: 22px;
+        }
+    }
+}
+
+.card-btn{
+
+    background-color: variables.$color-fondo-alternativo-dos;
+    color: variables.$color-texto-base ;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid variables.$borde-suave-card;
+    max-width: 1200px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+
+    .card-body{
+        padding: 2rem;
+        .card-title{
+            font-size: 40px;
+
+        }
+        .card-text{
+
+        }
+        
     }
 }
